# sbnn

./: .gitignore  README.md  _synctest.txt  pyproject.toml
asp/: README.md  instance_example.lp  learn_margin.lp  learn_weights.lp
docs/: SBN_pour_prediction__synthese.md  conception_pluripotence.md  note_de_cadrage.md  reflexion_taille_expressivite_stochasticite.md  resultat_apprentissage_marge.md  resultat_asp_attracteur_contraint.md  resultat_jalon2_memoire_associative.md  resultat_jalon3_asp.md  resultat_pluripotence_regimeB.md  resultat_tache1_robustesse_generalisation.md  showcase_digits.md  test_attention.md
experiments/: asp_attractor_basins.py  attention_efficacite.py  expressivite_vs_difficulte.py  followup_equal_train.py  hypothesis_robustness_generalization.py  learn_vs_hebbian.py  milestone1_reservoir.py  milestone2_associative.py  milestone3_asp.py  pluripotence_regimeB.py  showcase_digits.py
src/sbn_predict/: metrics.py
src/sbn_predict/core/: encoding.py  network.py  sbf.py
src/sbn_predict/learning/: asp_attractor.py  asp_solve.py  enumerate_fit.py  perceptron.py  search.py  ste.py
src/sbn_predict/regimes/: associative.py  feedforward.py  reservoir.py
tests/: test_learning.py  test_network.py  test_sbf.py
