[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbn-predict"
version = "0.0.1"
description = "Signed Boolean Networks (SBN) as predictive threshold networks: reservoir, associative memory, and solver-based (ASP) learning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Boyer" }]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",  # readout linéaire/logistique (régime C)
    "matplotlib>=3.7",    # figures comparables au rapport
]

[project.optional-dependencies]
asp = ["clingo>=5.6"]     # apprentissage-par-résolution §4.6 (asp_solve, milestone3_asp)
dev = ["pytest>=7.4", "ruff>=0.5", "mypy>=1.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
